[package]
name = "fcp-webhook"
description = "Production webhook handling library for FCP connectors"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
fcp-core = { path = "../fcp-core" }

# Async runtime
tokio = { workspace = true, features = ["sync", "time"] }
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time handling
chrono.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Crypto for signatures
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
ed25519-dalek.workspace = true
hex.workspace = true

# Utilities
parking_lot = "0.12"
bytes.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
